--- a/GalleryTwo.html
+++ b/GalleryTwo.html
@@ -7,7 +7,7 @@
 	<h2>Automobile Gallery - Page 2</h2>
 	<p>
 	<h3> <a href="#Jaguar">Jaguar</a></h3><br>
-	<h3> <a href="#Porsche"></a></h3>Porsche<br>
+	<h3> <a href="#Porsche">Porsche</a></h3><br>
 	<h3> <a href="#Shelby"> Shelby </a></h3><br>
 
 
